--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-openai
-numpy
-miniball
-argparse
-scipy
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+black==23.9.1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+frozenlist==1.4.0
+idna==3.4
+miniball==1.2.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.26.0
+openai==0.28.1
+packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
+PyYAML==6.0.1
+requests==2.31.0
+scipy==1.11.3
+tomli==2.0.1
+tqdm==4.66.1
+typing_extensions==4.8.0
+urllib3==2.0.6
+yarl==1.9.2
