Add functionality to check prompt output with regex pattern

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ __pycache__
 pyvenv.cfg
 .gitattributes
 *.log
-*.log
 src/test.yaml
 src/mock1.json
 src/mock2.json
 src/user_prompt.txt
 logs
+*.note
