Add parameter to take "model"
1. Changed distance for "target" criteria from eucledian to jaro_similarity

--- a/examples/regex/test3.yaml
+++ b/examples/regex/test3.yaml
@@ -8,3 +8,6 @@ regex_check:
           file: ../examples/regex/regex_prompt.txt
         time: 2
         regex: "<>"
+        target:
+            text: "<>\asdnaskjdnaijsdnijasnijdnn"
+            min: 1.0
